# uniramp

./: .clang-tidy  CMakeLists.txt  COPYING  Makefile  README.org  setup.py
.github/workflows/: modmesh_install.yml  modmesh_pytest.yml  uniramp_install.yml  uniramp_pytest.yml
cmake/: Black.cmake  Flake8.cmake  StandardSettings.cmake  Utils.cmake
contrib/dependency/: apt.ubuntu-1804-xenial.sh  install.sh
include/uniramp/: typeface.hpp  uniramp.hpp
include/uniramp/python/: python.hpp
src/: typeface.cpp  uniramp.cpp
tests/: test_coverage.py  test_img2text.py  test_loadfont.py
uniramp/: __init__.py  __main__.py  _core.py  coverage.py  img2text.py  ramp.py
